--- a/waterfall/config.yml
+++ b/waterfall/config.yml
@@ -48,5 +48,5 @@ disabled_commands:
 servers:
   lobby:
     motd: '&1Just another Waterfall - Forced Host'
-    address: localhost:25565
+    address: 162.55.3.102:32392
     restricted: false
